--- a/web_sard/appsettings.json
+++ b/web_sard/appsettings.json
@@ -8,8 +8,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "kpDatabase2": "Server=.;Database=sardsib_db;user=sa;password=8001721;MultipleActiveResultSets=true;",
-    "kpDatabase": "Server=2.187.34.21;Database=sardsib_db;user=sa;password=server1420501;MultipleActiveResultSets=true;"
+    "kpDatabase": "Server=.;Database=sardsib_db;user=sa;password=8001721;MultipleActiveResultSets=true;",
+    "kpDatabase2": "Server=2.187.34.21;Database=sardsib_db;user=sa;password=server1420501;MultipleActiveResultSets=true;"
 
   }
 }
